# godot-gut-mcp

./: README.md  glama.json  main.py  pyproject.toml  server.json
src/godot_gut_mcp/: parser.py  runner.py  server.py
